--- a/hw03.md
+++ b/hw03.md
@@ -1,4 +1,15 @@
 Write out variables  x, y and z in binary code<br/> 1) int8_t x = 67;  int8_t y = -7;   int8_t z = y - x;<br/> 2) int8_t x = 0xd3;<br/> 3) uint8_t = 0xd3;<br/> 4) int8_t x = 127;  int8_t y = -7;   int8_t z = y – x;<br/>
 5) float x = 1.125;<br/> 6) float x = 23.0;<br/> 7) float x = 0.45;<br/>
 上述代码中，哪些出现溢出错误，哪些出现精度误差。<br/>
-第4个代码出现溢出错误
+第2个代码出现溢出错误；第7个有精度误差。<br/><br/><br/>
+1)Method of complements<br/>
+In mathematics and computing, the method of complements is a technique used to subtract one number from another using only addition of positive numbers. This method was commonly used in mechanical calculators and is still used in modern computers.<br/>
+2)Byte<br/>
+The byte is a unit of digital information that most commonly consists of eight bits, representing a binary number. Historically, the byte was the number of bits used to encode a single character of text in a computer[1][2] and for this reason it is the smallest addressable unit of memory in many computer architectures.<br/>
+3)Integer (computer science)<br/>
+In computer science, an integer is a datum of integral data type, a data type that represents some range of mathematical integers. Integral data types may be of different sizes and may or may not be allowed to contain negative values. Integers are commonly represented in a computer as a group of binary digits (bits). The size of the grouping varies so the set of integer sizes available varies between different types of computers. Computer hardware, including virtual machines, nearly always provide a way to represent a processor register or memory address as an integer.<br/>
+4)Floating point<br/>
+n computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision. <br/><br/><br/>
+1)请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’
+complement ＋ 1（即，X每位求反加1）<br/>
+
