--- a/hw03.md
+++ b/hw03.md
@@ -12,4 +12,11 @@ In computer science, an integer is a datum of integral data type, a data type th
 n computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision. <br/><br/><br/>
 1)请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’
 complement ＋ 1（即，X每位求反加1）<br/>
+证明：用十进制举例，若宽度为10^2,则用0~49表示正数，50~99表示负数,-50=-（99-50+1），-49=（99-51+1），……，-1=-（99-99+1）。<br/>
+同理，若二进制的宽度为2^5，则范围是0~1111，有数0101，它的负数以补码形式表示，为1111-0101+1=1011.<br/>
+1)C程序：int8_t  x = -0x1f;  int y = x;  请用16进制描述变量 x 和 y，并说明 int y = x 的计算过程。 2)请用数学证明，为什么可以这么计算。<br/>
+将x转换为十进制，x=-31,
+
+
+
 
