--- a/hw03.md
+++ b/hw03.md
@@ -10,12 +10,21 @@ The byte is a unit of digital information that most commonly consists of eight b
 In computer science, an integer is a datum of integral data type, a data type that represents some range of mathematical integers. Integral data types may be of different sizes and may or may not be allowed to contain negative values. Integers are commonly represented in a computer as a group of binary digits (bits). The size of the grouping varies so the set of integer sizes available varies between different types of computers. Computer hardware, including virtual machines, nearly always provide a way to represent a processor register or memory address as an integer.<br/>
 4)Floating point<br/>
 n computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision. <br/><br/><br/>
+
+
+
+
+
 1)请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’
 complement ＋ 1（即，X每位求反加1）<br/>
-证明：用十进制举例，若宽度为10^2,则用0~49表示正数，50~99表示负数,-50=-（99-50+1），-49=（99-51+1），……，-1=-（99-99+1）。<br/>
-同理，若二进制的宽度为2^5，则范围是0~1111，有数0101，它的负数以补码形式表示，为1111-0101+1=1011.<br/>
+证明：用十进制举例，若宽度为10^2,则用0~49表示正数，50~99表示负数,-50=-（99-50+1），-49=（99-51+1），……，-1=-（99-99+1）。
+
+<br/>
+同理，若二进制的宽度为2^5，则范围是0~1111，若有数为0101，则他的负数用补码表示，且满足x+0101=10000,<br/>所以<br/>x=10000-0101<br/>=1111-0101+1<br/>=1010+1<br/><br/>
+
+
 1)C程序：int8_t  x = -0x1f;  int y = x;  请用16进制描述变量 x 和 y，并说明 int y = x 的计算过程。 2)请用数学证明，为什么可以这么计算。<br/>
-将x转换为十进制，x=-31,
+证明：将x转换为十进制，x=-31,
 
 
 
