--- a/hw03.md
+++ b/hw03.md
@@ -26,7 +26,9 @@ complement ＋ 1（即，X每位求反加1）<br/>
 1)C程序：int8_t  x = -0x1f;  int y = x;  请用16进制描述变量 x 和 y，并说明 int y = x 的计算过程。<br/><br/> 2)请用数学证明，为什么可以这么计算。<br/><br/>
 1）证明：将x转换为十进制，x=-31,将31转换成八位的二进制为11100000，所以-31用补码表示为1110 0001，再将11100001转化为32位的二进制为1111 1111 1111 1111 1111 1111 1110 0001，最后将其转换为十六进制为ffffffe1。
 <br/>
-2）证明：因为x是负数，所以先求x的绝对值，再求它的补码，然后将二进制转换为十六进制就能得出y。
+2）证明：因为x是负数，所以先求x的绝对值，再求它的补码，然后将二进制转换为十六进制就能得出y。<br/><br/>
 
 
 
+1) NaN 是什么？<br/>
+IEEE 754 specifies a special value called "Not a Number" (NaN) to be returned as the result of certain "invalid" operations, such as 0/0, ∞×0, or sqrt(−1). In general, NaNs will be propagated i.e. most operations involving a NaN will result in a NaN, although functions that would give some defined result for any given floating-point value will do so for NaNs as well, e.g. NaN ^ 0 = 1. There are two kinds of NaNs: the default quiet NaNs and, optionally, signaling NaNs. A signaling NaN in any arithmetic operation (including numerical comparisons) will cause an "invalid" exception to be signaled.
