--- a/hw03.md
+++ b/hw03.md
@@ -17,10 +17,11 @@ n computing, floating-point arithmetic (FP) is arithmetic using formulaic repres
 
 1)请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’
 complement ＋ 1（即，X每位求反加1）<br/>
-证明：用十进制举例，若宽度为10^2,则用0~49表示正数，50~99表示负数,-50=-（99-50+1），-49=-（99-51+1），……，-1=-（99-99+1）。
+证明：
+若二进制的宽度为2^k，则范围是0~2^k-1<br/>设一个数为X，他的负数为Y<br/>根据补码的规则，X+Y=2^k<br/>
+所以Y=2^k-1-X+1
 
-<br/>
-同理，若二进制的宽度为2^5，则范围是0~1111，若有数为0101，则他的负数用补码表示，且满足x+0101=10000,<br/>所以<br/>x=10000-0101<br/>=1111-0101+1<br/>=1010+1<br/><br/>
+
 
 
 1)C程序：int8_t  x = -0x1f;  int y = x;  请用16进制描述变量 x 和 y，并说明 int y = x 的计算过程。<br/><br/> 2)请用数学证明，为什么可以这么计算。<br/><br/>
