--- a/hw04.md
+++ b/hw04.md
@@ -3,4 +3,36 @@
 ### 2)Color(颜色, http://zh.wikipedia.org/wiki/)<br/><br/>
 
 ### ASCII<br/>
-abbreviated from American Standard Code for Information Interchange, is a character encoding standard for electronic communication. 
+abbreviated from American Standard Code for Information Interchange, is a character encoding standard for electronic communication. <br/><br/>
+
+
+
+
+### 颜色<br/>
+颜色或色彩是通过眼、脑和我们的生活经验所产生的一种对光的视觉效应。人对颜色的感觉不仅仅由光的物理性质所决定，还包含心理等许多因素，比如人类对颜色的感觉往往受到周围颜色的影响。有时人们也将物质产生不同颜色的物理特性直接称为颜色。![](images/颜色.jpg)<br/><br/>
+
+### 简单回答以下问题：
+### 1) 写出字符“A”,“中”的 ASCII 码、Unicode 码、
+### utf-8 编码。
+### http://wenku.baidu.com/view/f4c225340b4c2e3f572763da.html
+### 2)黄色(yellow)的RGB编码是( , , )
+### 3) 从网上下载一个 BMP 格式图像,用图片编辑工具另存在 jpg、 png、tiff 格式。问三种格式中,哪种格式显示质量好?相对于
+### BMP 格式,压缩率各是多少?
+### 4) Winrar压缩文件是lossless, or lossy 方法？<br/><br/>
+
+
+1)字符"A"的ASCII码为65<br/>
+字符"A"的Unicode码分十进制和十六进制，十进制为65，十六进制为41<br/>
+字符"A"的utf-8编码为0100 0001<br/><br/>
+
+2)黄色(yellow)的RGB编码是#FFFF00<br/><br/>
+
+
+3)从网上下载一个 BMP 格式图像,用图片编辑工具另存在 jpg、 png、tiff 格式。问三种格式中,哪种格式显示质量好?相对于BMP格式,压缩率各是多少?<br/>
+
+
+jpg格式的图片压缩率为100:1。<br/>
+png格式为无损格式,但不支持色彩管理。<br/>
+tiff格式为无损格式。<br/>
+
+
