--- a/hw04.md
+++ b/hw04.md
@@ -21,18 +21,17 @@ abbreviated from American Standard Code for Information Interchange, is a charac
 ### 4) Winrar压缩文件是lossless, or lossy 方法？<br/><br/>
 
 
-1)字符"A"的ASCII码为65<br/>
+1) 字符"A"的ASCII码为65<br/>
 字符"A"的Unicode码分十进制和十六进制，十进制为65，十六进制为41<br/>
 字符"A"的utf-8编码为0100 0001<br/><br/>
 
-2)黄色(yellow)的RGB编码是#FFFF00<br/><br/>
+2) 黄色(yellow)的RGB编码是#FFFF00<br/><br/>
 
 
-3)从网上下载一个 BMP 格式图像,用图片编辑工具另存在 jpg、 png、tiff 格式。问三种格式中,哪种格式显示质量好?相对于BMP格式,压缩率各是多少?<br/>
-
-
-jpg格式的图片压缩率为100:1。<br/>
+3) jpg格式的图片压缩率为100:1。<br/>
 png格式为无损格式,但不支持色彩管理。<br/>
 tiff格式为无损格式。<br/>
+<br/>
 
+4) winrar是无损压缩。
 
