--- a/hw04.md
+++ b/hw04.md
@@ -28,9 +28,10 @@ abbreviated from American Standard Code for Information Interchange, is a charac
 2) 黄色(yellow)的RGB编码是#FFFF00<br/><br/>
 
 
-3) jpg格式的图片压缩率为100:1。<br/>
-png格式为无损格式,但不支持色彩管理。<br/>
-tiff格式为无损格式。<br/>
+3) jpg格式的图片压缩率为16:1。<br/>
+png格式为无损格式,但不支持色彩管理。压缩率是2.7：1<br/>
+tiff格式为无损格式。压缩率是2：1<br/>
+tiff格式的图片质量更好。<br/>
 <br/>
 
 4) winrar是无损压缩。
