--- a/hw05.md
+++ b/hw05.md
@@ -22,3 +22,22 @@ X = A · B;<br/><br/>
 ![](images/xor3.PNG)  ;<br/><br/>
 ### 在xor gate中，全部假为假，全部真为真，一真一假为假。<br/><br/>
 
+#  3.(A + B)(B + C)<br/>
+![](images/ABBC.JPG)<br/><br/>
+
+# 4.由图得 X=A'⊕A·B<br/>
+|A|B|A'|A·B|X|
+|:-:|:-:|:-:|:-:|:-:|
+|0|0|1|0|1|
+|0|1|1|0|1|
+|1|0|0|0|0|
+|1|1|0|1|1|<br/><br/>
+
+# 5.(AB)’ = A’ + B’
+|A|B|A'|B'|(AB)'|A'+B'|
+|:-:|:-:|:-:|:-:|:-:|:-:|
+|0|0|1|1|1|1|
+|0|1|1|0|1|1|
+|1|0|0|1|1|1|
+|1|1|0|0|0|1|
+<br/><br/>
