--- a/hw05.md
+++ b/hw05.md
@@ -39,5 +39,17 @@ X = A · B;<br/><br/>
 |0|0|1|1|1|1|
 |0|1|1|0|1|1|
 |1|0|0|1|1|1|
-|1|1|0|0|0|1|
-<br/><br/>
+|1|1|0|0|0|0|<br/>
+由真值表得(AB)’ = A’ + B’成立。<br/><br/>
+
+
+6) There are eight 1bit full adder integrated circuits. Combine them to 8bit adder circuit using the following box diagram.<br/>
+7) Logical binary operations can be used to modify bit pattern. <br/>
+Such as<br/><br/>
+(X8X7X6X5X4X3X2X1)2 and (00001111)2 = (0000X4X3X2X1)2<br/><br/>
+We called that (00001111)2 is a mask which only makes low 4 bits to work.<br/><br/>
+Fill the follow expression<br/><br/>
+(1) (X8X7X6X5X4X3X2X1)2 or (00001111)2 = ( )2<br/><br/>
+(2) (X8X7X6X5X4X3X2X1)2xor (00001111)2 = ( )2<br/><br/>
+(3) ((X8X7X6X5X4X3X2X1)2 and (11110000)2 )or<br/><br/>
+(not (X8X7X6X5X4X3X2X1)2and (00001111)2) = ( )2<br/><br/>
