--- a/hw05.md
+++ b/hw05.md
@@ -43,13 +43,28 @@ X = A · B;<br/><br/>
 由真值表得(AB)’ = A’ + B’成立。<br/><br/>
 
 
-6) There are eight 1bit full adder integrated circuits. Combine them to 8bit adder circuit using the following box diagram.<br/>
-7) Logical binary operations can be used to modify bit pattern. <br/>
+ # 6.There are eight 1bit full adder integrated circuits. Combine them to 8bit adder circuit using the following box diagram.<br/>
+
+6.![](images/add.jpg);<br/><br/>
+
+# 7.Logical binary operations can be used to modify bit pattern. <br/>
 Such as<br/><br/>
 (X8X7X6X5X4X3X2X1)2 and (00001111)2 = (0000X4X3X2X1)2<br/><br/>
 We called that (00001111)2 is a mask which only makes low 4 bits to work.<br/><br/>
 Fill the follow expression<br/><br/>
-(1) (X8X7X6X5X4X3X2X1)2 or (00001111)2 = ( )2<br/><br/>
-(2) (X8X7X6X5X4X3X2X1)2xor (00001111)2 = ( )2<br/><br/>
-(3) ((X8X7X6X5X4X3X2X1)2 and (11110000)2 )or<br/><br/>
-(not (X8X7X6X5X4X3X2X1)2and (00001111)2) = ( )2<br/><br/>
+(1)(X8X7X6X5X4X3X2X1)2 or (00001111)2=(X8X7X6X5X4X3X2X1)2<br/><br/>
+(2) (X8X7X6X5X4X3X2X1)2xor (00001111)2 = (X8X7X6X50000)2<br/><br/>
+(3) ((X8X7X6X5X4X3X2X1)2 and (11110000)2 )or
+(not (X8X7X6X5X4X3X2X1)2and (00001111)2) = 
+(X8X7X6X5X4'X3'X2'X1')2<br/><br/>
+
+
+# 使用维基百科，解释以下概念。
+## 1) Logic gate<br/>
+## 2) Boolean algebra<br/>
+
+### 1）Logic gate<br/>
+In electronics, a logic gate is an idealized or physical device implementing a Boolean function; that is, it performs a logical operation on one or more binary inputs and produces a single binary output. Depending on the context, the term may refer to an ideal logic gate, one that has for instance zero rise time and unlimited fan-out, or it may refer to a non-ideal physical device[1] (see Ideal and real op-amps for comparison).<br/>
+
+### 2) Boolean algebra<br/>
+In mathematics and mathematical logic, Boolean algebra is the branch of algebra in which the values of the variables are the truth values true and false, usually denoted 1 and 0 respectively. Instead of elementary algebra where the values of the variables are numbers, and the prime operations are addition and multiplication, the main operations of Boolean algebra are the conjunction and denoted as ∧, the disjunction or denoted as ∨, and the negation not denoted as ¬. It is thus a formalism for describing logical relations in the same way that elementary algebra describes numeric relations.
