--- a/hw06.md
+++ b/hw06.md
@@ -1,26 +1,44 @@
-1、According to the von Neumann architecture, List basic parts of a
+## 1、According to the von Neumann architecture, List basic parts of a
 computer.<br/>
 显示器、键盘、鼠标、内存、显卡、CPU、硬盘、光驱、主板<br/><br/>
 
-2、A computer has 64 MB (megabytes) of memory. How many bits are
+## 2、A computer has 64 MB (megabytes) of memory. How many bits are
 needed to address any single byte in memory?<br/>
 2^6*2^20=2^26,所以需要26个bit。<br/><br/>
 
-3、List basic parts of a CPU, include cache or not?<br/>
+## 3、List basic parts of a CPU, include cache or not?<br/>
 Control Unit、Register、Combinational Logic、Main Memory<br/><br/>
 
-4、What mean secondary storage. List some on your PC.<br/><br/>
+## 4、What mean secondary storage. List some on your PC.<br/><br/>
 Auxiliary memory, also known as auxiliary storage, secondary storage, secondary memory or external memory, is a non-volatile memory (does not lose stored data when the device is powered down) that is not directly accessible by the CPU, because it is not accessed via the input/output channels (it is an external device). In RAM devices (as flash memory) data can be directly deleted or changed.<br/>
 硬盘，U盘<br/><br/>
-5、使用维基百科，解释以下概念：<br/>
-CPU、RAM、ROM、Bus (computing)、Parallel Computing<br/><br/>
+## 5、使用维基百科，解释以下概念：<br/>
+CPU、RAM、ROM、Bus (computing)、Parallel Computing<br/>
 
-6、写一段文字，简单解释“云计算（cloud computing）”<br/><br/>
+CPU:A central processing unit (CPU) is the electronic circuitry within a computer that carries out the instructions of a computer program by performing the basic arithmetic, logical, control and input/output (I/O) operations specified by the instructions. <br/>
 
-7、小孙买了计算机主板，说明书表明“支持双通道DDR3-1333内存，
+RAM:Random-access memory (RAM /ræm/) is a form of computer data storage that stores data and machine code currently being used. A random-access memory device allows data items to be read or written in almost the same amount of time irrespective of the physical location of data inside the memory. In contrast, with other direct-access data storage media such as hard disks, CD-RWs, DVD-RWs and the older magnetic tapes and drum memory, the time required to read and write data items varies significantly depending on their physical locations on the recording medium, due to mechanical limitations such as media rotation speeds and arm movement.<br/>
+
+ROM:Read-only memory (ROM) is a type of non-volatile memory used in computers and other electronic devices. Data stored in ROM can only be modified slowly, with difficulty, or not at all, so it is mainly used to store firmware (software that is closely tied to specific hardware, and unlikely to need frequent updates) or application software in plug-in cartridges.<br/>
+
+Bus (computing):In computer architecture, a bus(a contraction of the Latin omnibus) is a communication system that transfers data between components inside a computer, or between computers. This expression covers all related hardware components (wire, optical fiber, etc.) and software, including communication protocols.<br/>
+
+Parallel Computing:Parallel computing is a type of computation in which many calculations or the execution of processes are carried out simultaneously.[1] Large problems can often be divided into smaller ones, which can then be solved at the same time. There are several different forms of parallel computing: bit-level, instruction-level, data, and task parallelism. <br/>
+<br/>
+## 6、写一段文字，简单解释“云计算（cloud computing）”<br/><br/>
+云计算是可配置计算机系统资源和更高级别服务的共享池，可以通过最少的管理工作快速配置，通常通过Internet。云计算依赖于资源共享来实现一致性和规模经济，类似于公用事业。<br/>
+
+## 7、小孙买了计算机主板，说明书表明“支持双通道DDR3-1333内存，
 最大支持16G”<br/>
-1）DDR3内存，“3”和“1333”的含义是什么？<br/>
-2）小孙买8G DDR3-1600的内存能提高性能吗？<br/>
-3）小孙买4G*2 DDR3-1333的内存能提高性能吗？<br/>
-4）16G需要多少位地址？<br/>
+### 1）DDR3内存，“3”和“1333”的含义是什么？<br/><br/>
+“3”的含义是第三代，“1333”的含义是数据速率.<br/>
+
+### 2）小孙买8G DDR3-1600的内存能提高性能吗？<br/><br/>
+不能提高性能，因为主板只支持1333的数据速率。<br/>
+
+### 3）小孙买4G*2 DDR3-1333的内存能提高性能吗？<br/><br/>
+能提高性能，因为达到了主板的上限。<br/><br/>
+
+### 4）16G需要多少位地址？<br/><br/>
+16G=2^4*2^30byte,所以需要34位地址。<br/><br/>
 备注，维基百科（中文）“DDR3 SDRAM”<br/>
