--- a/hw05.md
+++ b/hw05.md
@@ -12,17 +12,25 @@ following formula.
 
 # 1.与门三种表达方式为：<br/><br/>
 X = A · B;<br/><br/>
-![](images/11.PNG)  ;<br/><br/>
-![](images/22.PNG)  ;<br/><br/>
+
+![](images/11.PNG) <br/><br/>
+
+![](images/22.PNG) <br/><br/>
+
 ### 在与门中，全部为真才是真,一个为假即为假，全部假也为假。<br/><br/>
 
 # 2.xor gate的三种表达方式为：<br/><br/>
-![](images/xor1.PNG)  ;<br/><br/>
-![](images/xor2.PNG)  ;<br/><br/>
-![](images/xor3.PNG)  ;<br/><br/>
+
+![](images/xor1.PNG)  <br/><br/>
+
+![](images/xor2.PNG) <br/><br/>
+
+![](images/xor3.PNG) <br/><br/>
+
 ### 在xor gate中，全部假为假，全部真为真，一真一假为假。<br/><br/>
 
 #  3.(A + B)(B + C)<br/>
+
 ![](images/ABBC.JPG)<br/><br/>
 
 # 4.由图得 X=A'⊕A·B<br/>
