--- a/hw07.md
+++ b/hw07.md
@@ -3,21 +3,51 @@
 ### int_8 c = a + 3; <br/><br/>
 
 1）Write your assembly code & machine code<br/>
+    
+    LOD #1 → STO X → LOD Y → ADD #3 → STO X
 
 2）Explain machine code execution with the fetch-decode-execute cycle <br/>
 
+    Main memory –> fetch instruction –> Decode instruction –>Registers –>Get data –>Execute the instruction –> Main memory
+
 3）Explain functions about  IR, PC, ACC registers in a CPU<br/>
 
+    IR:在计算中，指令寄存器（IR）是一个部分CPU的控制单元，其保持当前正在执行或解码该指令。
+    PC:程序计数器（PC），通常称为指令指针（IP中）英特尔 的x86和安腾 微处理器，并且有时也被称为指令地址寄存器（IAR），的指令计数器，或指令定序器的只是部分,是一个处理器寄存器，用于指示计算机在其程序序列中的位置。
+    ACC:要存储的字必须传送到MBR，从那里进入特定的存储单元，并且要在ALU中处理的算术数据首先进入MBR然后进入累积寄存器(ACC)，然后在ALU中进行处理。
+
 4）Explain physical meaning about vars a & c in a machine<br/>
+    
+    为数据的储存提供一个地址
 
 ## 2、简答题 <br/>
 ### 1）What are stored in memory?<br/> 
+
+    数据与指令存在内存中
+
 ### 2）Can a data or a instruction stored in the same place? <br/>
+
+    可以
+
 ### 3） Explain Instruction Format with example instructions.<br/><br/>
+
+    SUB X:00000001 bbbbbbbb
 
 ## 3、解释以下词汇 <br/>
 ### 1）汇编语言（Assembly Language） <br/>
+    一个组件（或汇编）语言，通常缩写ASM，是任何低级语言，其中有该程序的语句和之间的很强的对应架构的机器代码指令。
 ### 2）编译（Compiler） <br/>
+    一个编译器是计算机软件，其主要翻译计算机代码从高级语言到机器代码来创建一个可执行程序。
 ### 3）命令式语言（Imperative programming） <br/>
+    在计算机科学中，命令式编程是一种 编程范式，它使用改变程序状态的语句。
 ### 4）函数编程语言（Functional programming） <br/>
+    在计算机科学中，函数式编程是一种编程范式，一种构建计算机程序结构和元素的方式，将计算视为数学函数的评估并避免改变状态和可变数据。
 ### 5）过程式编程（Procedural programming）
+    过程式编程是一种编程范式，它源于结构化编程，基于过程调用的概念。程序，也称为例程，子程序或函数，只包含一系列要执行的计算步骤。
+
+                                                        
+                                                        
+                                                        
+                                                        
+                                                        
+                                                                    from Wiki
