--- a/hw08.md
+++ b/hw08.md
@@ -11,18 +11,86 @@ number=number/16
 
 ENDWHILE
 
-condition 10~15: a = A, B, C, D, E, F
+condition 10,11,12,13,14,15: a = A, B, C, D, E, F
 
 Reversely Print Each a
 
-
 2）C语言实现（先用注释写好算法，然后翻译）<br/>
+
+    #include<stdio.h>
+    int main(){
+        int number,i=0,a[10000],j;
+        scanf("%d",&a[i]);
+        while(number!=0){
+        a[i]=number%16;
+        number=number/16;
+        i++;
+        }
+        for(j=i;i>=0;i--){
+            if(a[i]==10)
+            printf("A");
+            else if(a[i]==11)
+            printf("B");
+            else if(a[i]==12)
+            printf("C");
+            else if(a[i]==13)
+            printf("D");
+            else if(a[i]==14)
+            printf("F");
+            else if(a[i]==15)
+            printf("G");
+            else
+            printf("%d",a[i]);
+        }
+    }
+
+
 3）使用 -1, 0, 1, 15, 26，3265 最为输入测试你的程序<br/><br/>
+
+    -1
+    0
+    1
+    15
+    1A
+    CC1
+
 2、名词解释与对比<br/>
 1）Top-down design<br/>
+
+         A top-down approach (also known as stepwise design and in some cases used as a synonym of decomposition) is essentially the breaking down of a system to gain insight into its compositional sub-systems in a reverse engineering fashion.
+
 2） Work breakdown structure (WBS)<br/>
+
+        A work-breakdown structure (WBS)[2] in project management and systems engineering, is a deliverable-oriented breakdown of a project into smaller components. A work breakdown structure is a key project deliverable that organizes the team's work into manageable sections.
 3）简述管理学 WBS 与 信息学Top-down设计 的异同<br/>
+
+        自上而下的方法始于全局。它从那里分解成更小的部分。
+        管理学 WBS是一种树状结构，显示了实现目标所需的不同类别的细分。
+
 3、仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode 描述洗衣机控制程序。假设洗衣机可执行的基本操作如下：<br/>
 water_in_switch(open_close) // open 打开上水开关，close关闭<br/>
 water_out_switch(open_close) // open 打开排水开关，close关闭<br/>
 get_water_volume() //返回洗衣机内部水的高度<br/>
+
+        选择洗衣模式：水位，浸泡时间，漂洗次数；
+        注水，到达一定水量停止 ；
+        浸泡，计时 ；
+        滚筒转动, 左3圈，右3圈 ；
+        排水，排到最低水位 ；
+        滚筒转动，脱水；
+        结束；
+
+        GET 选择模式
+        water_in_switch(open)
+        UNTILL 一定水量
+        water_in_switch(close)
+        浸泡
+        UNTILL 到达浸泡时间
+        for(次数=0;次数<规定次数；次数++)
+        滚筒转动，左3圈，右3圈
+        while(水位>最低水位)
+        排水
+        while(水位==最低水位)
+        滚筒转动，脱水
+        end while
+        end;
