--- a/hw08.md
+++ b/hw08.md
@@ -94,3 +94,7 @@ get_water_volume() //返回洗衣机内部水的高度<br/>
         滚筒转动，脱水
         end while
         end;
+
+3）根据你的实践，请分析“正常洗衣”与“快速洗衣”在用户目标和程序上的异同。 
+
+    快速洗衣没有浸泡的时间，且滚筒转动次数减少。
