--- a/hw05.md
+++ b/hw05.md
@@ -13,9 +13,9 @@ following formula.
 # 1.与门三种表达方式为：<br/><br/>
 X = A · B;<br/><br/>
 
-![](images/11.PNG)
+![](images/11.png)
 
-![](images/22.PNG) 
+![](images/22.png) 
 
 ### 在与门中，全部为真才是真,一个为假即为假，全部假也为假。<br/><br/>
 
